# reasoning-bench

./: .gitignore  README.md  pyproject.toml
logs/: 2024-12-10T18-23-19+00-00_musique_bkHHZqJedTvafdLHCoHYKQ.eval
reasoning_bench/tasks/: __init__.py
reasoning_bench/tasks/hotpot_qa/: README.md  hotpot_qa.py
reasoning_bench/tasks/musique/: README.md  __init__.py  musique.py
reasoning_bench/tasks/procbench/: README.md  __init__.py  procbench.py
